src/css/Corredor.css
/* ... */
.pager-prev {
  float:left;
  width:45%;
  text-align:left;
}

.pager-next {
  float:right;
  width:45%;
  text-align:right;
}

.pager-prev:before,
.pager-next:before {
  display:block;
  margin:0 0 3px;
  color:#777;
  font-size:80%;
}

.pager-prev:before { content:"Prev"; }
.pager-next:before { content:"Next"; }

.pager-arrow {
  display:none;
}

/* ==================================================
 * Sidebar
 * ================================================== */

#box2 {
  font-size:85%;
  line-height:1.5;
}

.hatena-module {
  margin:0 0 25px;
}

.hatena-module:last-child {
  margin:0;
}

.hatena-module-title {
  margin:0 0 5px;
  color:#333;
  font-size:120%;
  font-weight:bold;
}

/* サイドバー内の広告 : ウィンドウ幅を縮めた時に広告が突っ張り棒にならないようにする */
#neos21-adsense-side {
  overflow:hidden;
  margin:0 auto;
  text-align:center;
}

/* ==================================================
 * Profile Module
 * ================================================== */

/* .hatena-module-profile */
.profile-icon {
  float:left;
  margin:0 10px 10px 0;
  border-radius:5px;
  background-clip:padding-box;
}

.hatena-id-link {
  display:inline-block;
  margin:0 0 5px;
  font-size:110%;
  font-weight:bold;
}

.profile-description {
  font-size:90%;
  line-height:1.5;
}

.profile-description p {
  margin:0;
}

/* ==================================================
 * URL List Module (リンク・最新記事・最近のコメント・月別アーカイブ・カテゴリは .hatena-urllist という共通の class が振られる)
 * ================================================== */

.hatena-urllist {
  margin:0;
  padding:0;
  list-style:none;
}

.hatena-urllist li {
  padding:8px 0;
  border-bottom:1px solid #ddd;
  line-height:1.5;
}

/* 最新記事の日付 */
.urllist-date-link {
  font-size:90%;
}

.urllist-date-link a {
  color:#777;
}

/* 最新記事のカテゴリ */
.urllist-categories {
  margin:3px 0 0;
  font-size:105%;
}

/* カテゴリのリンクのみ詰める */
.hatena-module-category .hatena-urllist li {
  padding:4px 0;
}

/* Category iOS 用スクロールバー : スクロールバー全体の幅 */
.hatena-module-category .hatena-module-body::-webkit-scrollbar {
  width:10px;
}

/* Category iOS 用スクロールバー : スクロールバーのスタイル */
.hatena-module-category .hatena-module-body::-webkit-scrollbar-thumb {
  background:#ddd;
  border-radius:10px;
}

/* ==================================================
 * Search Module
 * ================================================== */

/* .hatena-module-search-box */
.search-form {
  -moz-box-sizing:border-box;
       box-sizing:border-box;
  position:relative;
  width:100%;
  border:1px solid #ddd;
  border-radius:3px;
  background-clip:padding-box;
}

.search-module-input {
  width:90%;
  height:20px;
  padding:5px;
  border:0;
  color:#333;
  background:none;
  outline:0;
}

.search-module-button {
  position:absolute;
  top:5px;
  right:5px;
  width:20px;
  height:20px;
  border:0;
  text-indent:-9999px;
  background:transparent url(http://blog.hatena.ne.jp/images/theme/search.png) no-repeat right center;
  outline:0;
  opacity:0.5;
}

.search-module-button:hover {
  opacity:0.85;
}

/* ==================================================
 * Footer
 * ================================================== */

/* #bottom-editarea : ヘッダと同じ */

/* フッタリンク */
#neos21-footer-link {
  text-align:center;
  list-style:none;
}

#neos21-footer-link li {
  padding:0 5px;
  border-left:1px solid #ddd;
  display:inline-block;
}

#neos21-footer-link li:first-child {
  border-left:0;
}


/* --------------------------------------------------
 * About ページ
 * -------------------------------------------------- */


.page-about .entry-content {
  border:0;
}

.page-about dt {
  margin:0 0 5px;
  border-bottom:1px solid #ddd;
  font-size:140%;
}

.page-about dd {
  margin:0 0 30px;
}


/* --------------------------------------------------
 * Archive ページ
 * -------------------------------------------------- */


/* body.page-archive */
.archive-entry {
  margin:30px 0;
}

.archive-entry:first-child {
  margin:0;
}

.page-archive .entry-title {
  font-size:140%;
}

.page-archive .entry-description {
  margin:5px 0 10px;
  line-height:1.5em;
}

/* はてなスター : これを囲む .social-buttons:before で Clearfix している */
.page-archive .star-container {
  display:block;
  margin-top:10px;
}



/* --------------------------------------------------
 * Media Queries
 * -------------------------------------------------- */


/* ==================================================
 * Retina Display
 * ================================================== */

@media (-webkit-min-device-pixel-ratio:2) {
  
  .search-module-button {
    background:transparent url(http://blog.hatena.ne.jp/images/theme/search@2x.png) no-repeat right center;
    background-size:20px 20px;
  }
  
}

/* ==================================================
 * Tablet
 * ================================================== */

@media (min-width:768px) and (max-width:1124px) {
  
  #container {
    width:724px;
  }
  
  #main {
    width:460px;
  }
  
  #box2 {
    width:245px;
  }
  
  /* このサイズで cover にすると下に黒い余白ができるため解除 */
  #blog-title-inner {
    background-size:auto !important;
  }
  
}
/* ... */

